# WzrdMerlin

./: .tmp_probe.py  .tmp_probe_ab.py  Dockerfile  GEMINI.md  Modelfile  V2_FEATURES_1_3_IMPLEMENTATION.md  V2_ROADMAP.md  docker-compose.yml  entrypoint.sh  merlin.config.yaml  requirements.txt  test_kv_state.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: lib.rs
dashboard/src/components/: CapabilitySidebar.tsx  FileExplorer.tsx  InferenceSidebar.tsx  InteractionCanvas.tsx  StatusBar.tsx
dashboard/src/hooks/: useMerlinSSE.ts
src/core/: actor.py  base_agent.py  config.py  events.py  gardener.py  inference.py  llm.py  main.py  memory.py  router.py  self_improve.py  state.py  watchdog.py
src/core/mcp/: codemode.py  forage.py  manager.py
src/sidecar/: Cargo.toml  Dockerfile  main.rs
src/tui/: __main__.py  app.py
tests/: test_crash_recovery_activation.py  test_feature1_reliability.py  test_feature2_3_contracts_and_routing.py  test_inference_engine.py  test_phase1_inference.py  test_phase2_mcp.py  test_phase3_durable.py
