[package]
name = "merlin-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-nats = "0.33"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
